[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Entities/Items/Weapons/Projectiles/Projectile.gd" type="Script" id=1]
[ext_resource path="res://src/Entities/Character/Body/BaseTracker.gd" type="Script" id=2]
[ext_resource path="res://assets/graphics/items/projectiles/bullet.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 3 )

[node name="Projectile" type="RigidBody2D"]
collision_layer = 2147483650
collision_mask = 2147483653
mode = 2
mass = 5.0
continuous_cd = 2
contacts_reported = 10
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="BodyDetection" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyDetection"]
shape = SubResource( 1 )

[node name="BodyGhost" type="Area2D" parent="."]
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BodyGhost"]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionTrackerFront" type="RayCast2D" parent="."]
visible = false
position = Vector2( 3, 0 )
cast_to = Vector2( 10, 0 )
collision_mask = 2147483653
script = ExtResource( 2 )
track_units = true
track_walls = true

[node name="CollisionTrackerBack" type="RayCast2D" parent="."]
visible = false
position = Vector2( -3, 0 )
cast_to = Vector2( -10, 0 )
collision_mask = 2147483653
script = ExtResource( 2 )
track_units = true
track_walls = true
